// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`View Filter Group creation should fail when parentViewFilterGroupId does not exist 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find viewFilterGroup for given parentViewFilterGroupId",
  "name": "NotFoundError",
}
`;

exports[`View Filter Group creation should fail when parentViewFilterGroupId equals id (self-reference) 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find viewFilterGroup for given parentViewFilterGroupId",
  "name": "NotFoundError",
}
`;

exports[`View Filter Group creation should fail when viewId does not exist 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find view for given viewId",
  "name": "NotFoundError",
}
`;

exports[`View Filter Group creation should fail when viewId is not a valid UUID 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "invalid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;
